cloud/javascript-app/k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ares
spec:
  type: ClusterIP
  selector:
    app: ares
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
